update BD
